Fix transaction listing layout on smaller display #119

--- a/css/modal.less
+++ b/css/modal.less
@@ -151,6 +151,11 @@
                 border-radius: 2px;
                 background-color: #7cb342;
               }
+              &:after {
+                content: '';
+                clear: both;
+                display: table;
+              }
             }
             .transaction-path {
               background-image: url('@{images}/sprites/arrow.png');
@@ -170,11 +175,17 @@
                 padding: 16px 12px;
                 background-color: white;
                 border-radius: 2px;
-                width: 302px;
+                width: calc(~"50% - 40px");
+                overflow: auto;
                 .lisk {
                   display: inline-block;
                   float: right;
                 }
+              }
+              &:after {
+                content: '';
+                clear: both;
+                display: table;
               }
             }
           }
@@ -428,6 +439,11 @@
                 border-radius: 2px;
                 background-color: #7cb342;
               }
+              &:after {
+                content: '';
+                clear: both;
+                display: table;
+              }
             }
             .transaction-path {
               background-image: url('@{images}/sprites/arrow.png');
@@ -447,11 +463,17 @@
                 padding: 16px 12px;
                 background-color: white;
                 border-radius: 2px;
-                width: 302px;
+                width: calc(~"50% - 40px");
+                overflow: auto;
                 .lisk {
                   display: inline-block;
                   float: right;
                 }
+              }
+              &:after {
+                content: '';
+                clear: both;
+                display: table;
               }
             }
           }
